<resources>
    <string name="app_name">HitchHiking</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_activity_offer">Offer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_request">Request</string>
    <string name="title_activity_matching">Matching Results</string>
    <string name="title_activity_maps"></string>


    <string name="map_fr">Origin</string>
    <string name="map_to">Dest</string>
    <string name="map_back">Return</string>
    <string name="map_via">Via</string>
    <string name="map_path">Path</string>

    <!-- Info page -->
    <string name="info_firname">First Name</string>
    <string name="info_lastname">Last Name</string>
    <string name="info_job">Occupation</string>
    <string name="info_age">Age Group</string>
    <string name="info_address">Address</string>
    <string name="info_city">City</string>
    <string name="info_state">State</string>
    <string name="info_no">Cellphone Number</string>
    <string name="info_gender">Gender</string>
    <string name="info_female">Female</string>
    <string name="info_male">Male</string>
    <string name="info_role">Role</string>
    <string name="info_avatar">Avatar</string>
    <string name="info_driver">Driver</string>
    <string name="info_hiker">Hiker</string>
    <string name="info_plate">Plate Number</string>
    <string name="info_profile">Profile</string>
    <string name="info_choose">Choose Image</string>
    <string name="info_upload">Upload</string>
    <string name="info_submit">Save</string>
    <string-array name="age_group">
        <item>below 20</item>
        <item>20 to 35</item>
        <item>35 to 50</item>
        <item>50 to 65</item>
        <item>65 and above</item>
    </string-array>

    <string name="title_activity_base">BaseActivity</string>
    <string name="action_settings">Settings</string>
    <string name="nav_drawer_opened">drawer opened</string>
    <string name="nav_drawer_closed">drawer closed</string>
    <string name="title_activity_maps_">Map</string>


    <string name="from">From</string>
    <string name="destination">To</string>
    <string name="pass">Which places I pass, Split with ,</string>
    <string name="seats">Seats Available</string>
    <string name="time_start">Time Starts</string>
    <string name="time_end">Time Ends</string>

</resources>
