<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".InfoActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="20dp"
    android:paddingTop="70dp">


    <EditText
        android:id="@+id/info_name0"
        android:layout_width="117dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Last Name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/info_name1"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="First Name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/info_job"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Occupation"
        android:inputType="text" />

    <EditText
        android:id="@+id/info_city"
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="City"
        android:inputType="text" />


    <EditText
        android:id="@+id/info_address"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Address"
        android:inputType="textPostalAddress" />

    <EditText
        android:id="@+id/info_state"
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="State"
        android:inputType="text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="61dp"
                android:layout_height="match_parent"
                android:gravity="left"
                android:text="@string/info_gender"
                android:textAlignment="center" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:gravity="right"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/info_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/info_female" />

                <RadioButton
                    android:id="@+id/info_male"
                    android:layout_width="78dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/info_male" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="57dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:text="@string/info_role"
                android:textAlignment="center" />

            <CheckBox
                android:id="@+id/info_hiker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/info_hiker" />

            <CheckBox
                android:id="@+id/info_driver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/info_driver" />
        </LinearLayout>

    <EditText
        android:id="@+id/info_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Mobile Phone Number"
        android:inputType="phone" />

    <LinearLayout
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_age" />

        <Spinner
            android:id="@+id/age"
            android:layout_width="63dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <EditText
        android:id="@+id/info_plate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Plate Number"
        android:inputType="text" />

    <Button
        android:id="@+id/info_submit"
        android:layout_width="77dp"
        android:layout_height="36dp"
        android:text="@string/info_submit" />

    </LinearLayout>

